[package]
name = "pv-simulator"
version = "0.1.0"
edition = "2021"
authors = ["Aleks Pickle <aleks.work2222@gmail.com>"]

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
deadpool-lapin = "0.10"
env_logger = "0.9.3"
expect-test = "1.4"
futures-lite = "1.12"
lapin = "2.1.1"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }
